delete old styles

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,4 @@
-@import '../../assets/scss/old/variables';
+@import '../../assets/scss/variables';
 .footer {
   position: relative;
   z-index: 50;
