change header height

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,8 +44,7 @@
     <ul class="menu menu--header-menu">
       <li class="menu__item" routerLinkActive="menu__link--active" >
         <a class="menu__link" routerLink="/dashboard">
-          <span class="menu__link-text">Trade
-          </span>
+          <span class="menu__link-text">Trade</span>
         </a>
       </li>
       <li class="menu__item menu__item--with-submenu" *ngIf="isAuthenticated()"
