--- a/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
+++ b/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
@@ -71,7 +71,7 @@
           <span *ngIf="passwordForm.controls['password'].value !== passwordForm.controls['confirmPassword'].value
            || passwordForm.controls['confirmPassword'].errors['passwordConfirm']"
             class="wrap-input__message">
-              Password is not matches.
+              Passwords you provided do not match.
             </span>
         </div>
         <!--Input error section ends-->
