--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -31,8 +31,8 @@
         <div class="select__value select__value--active"
              (click)="togglePaymentSystemDropdown()"
         >
-          <img [src]="selectedMerchant.name | getIconUrl" class="select__list-item-icon">
-          {{selectedMerchant.name}}
+          <img [src]="selectMerchantName | getIconUrl" class="select__list-item-icon">
+          {{selectMerchantName}}
         </div>
         <div class="select__label">Payment system</div>
         <div class="select__line"></div>
@@ -51,14 +51,30 @@
             </div>
           </div>
           <ul class="select__list select__list--open">
+
+            <ng-template ngFor let-merchant [ngForOf]="merchants">
+              <ng-template [ngTemplateOutlet]="loadMerchantTemplate(merchant)"
+                           [ngTemplateOutletContext]="{ $implicit: merchant}">
+              </ng-template>
+            </ng-template>
+
+            <ng-template #simpleMerchant let-merchant>
             <li class="select__list-item"
-                *ngFor="let merchant of merchants"
-                (click)="selectMerchant(merchant)"
-            >
+                (click)="selectMerchant(merchant)">
               <img [src]="merchant.name | getIconUrl" class="select__list-item-icon">
-              <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
               {{merchant.name}}
             </li>
+            </ng-template>
+
+            <ng-template #listMerchant let-merchant>
+              <li class="select__list-item"
+                  *ngFor="let nested of merchant.listMerchantImage"
+                  (click)="selectMerchant(merchant, nested.image_name)">
+                <img [src]="nested.image_name | getIconUrl" class="select__list-item-icon">
+                {{nested.image_name}}
+              </li>
+            </ng-template>
+
           </ul>
         </div>
       </div>
@@ -68,7 +84,8 @@
            [ngClass]="{'wrap-input--error': !form.valid && isSubmited}"
       >
 
-        <app-price-input [placeholder]="'Amount'" (customInput)="amountInput($event)" name="amount" formControlName="amount"></app-price-input>
+        <app-price-input [placeholder]="'Amount'" (customInput)="amountInput($event)" name="amount"
+                         formControlName="amount"></app-price-input>
         <!--Input error section starts-->
         <span class="wrap-input__message"
               *ngIf="!form.valid && isSubmited"
@@ -77,7 +94,7 @@
       </div>
 
       <div class="refill__closed-error" *ngIf="!selectedMerchant">
-         Sorry, refill is closed for current moment!
+        Sorry, refill is closed for current moment!
       </div>
     </div>
   </form>
@@ -101,7 +118,8 @@
     </div>
     <div class="title refill__fiat-successful-title">Request was created!</div>
     <div class="subtitle refill__fiat-successful-subtitle">
-      Please go to <a href="{{redirectionUrl}}" target="_blank" class="link">{{selectedMerchant.name}}</a> to make a payment
+      Please go to <a href="{{redirectionUrl}}" target="_blank" class="link">{{selectMerchantName}}</a> to make a
+      payment
       <b>{{refillData.params.ok_item_1_price}} {{refillData.params.ok_currency}}</b>
     </div>
     <div class="subtitle refill__fiat-successful-subtitle">
@@ -113,7 +131,9 @@
   <div class="note modal__note">
     <div class="note__title">Please note:</div>
     <ul class="note__list">
-      <li class="note__list-item">We have good news for you! It’s more then 24 currencies available for deposit right now:</li>
+      <li class="note__list-item">We have good news for you! It’s more then 24 currencies available for deposit right
+        now:
+      </li>
     </ul>
   </div>
 </div>
