--- a/src/app/static-pages/contacts/contacts.component.html
+++ b/src/app/static-pages/contacts/contacts.component.html
@@ -5,11 +5,11 @@
         {{'Contacts & representatives' | translate}}
       </h1>
     </div>
-    <p class="static-pages__paragraph" style="max-width: 684px;">{{'Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates' | translate}}.
+    <p class="static-pages__paragraph" style="max-width: 684px;">{{'Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates.' | translate}}
     </p>
     <div class="contacts">
       <div class="contacts__info">
-        <p class="static-pages__paragraph">{{'You can find us' | translate}}:</p>
+        <p class="static-pages__paragraph">{{'You can find us:' | translate}}</p>
         <div class="contacts__info-wrap">
           <div class="contacts__country-wrap">
             <div class="contacts__country">
@@ -129,7 +129,7 @@
         </div>
       </div>
       <div class="contacts__form">
-        <p class="static-pages__paragraph">{{'Send form & Exrates team will contact you next 8 hours' | translate}}.</p>
+        <p class="static-pages__paragraph">{{'Send form & Exrates team will contact you next 8 hours.' | translate}}</p>
         <form action="#">
           <div class="wrap-input wrap-input--grey contacts__wrap-input">
             <input class="wrap-input__input" type="text"
@@ -139,7 +139,7 @@
             <div class="wrap-input__line"></div>
             <!--Input error section starts-->
             <span class="wrap-input__message" style="display: none;">
-              {{'This field is required' | translate}}.
+              {{'This field is required.' | translate}}
             </span>
             <!--Input error section ends-->
           </div>
@@ -151,7 +151,7 @@
             <div class="wrap-input__line"></div>
             <!--Input error section starts-->
             <span class="wrap-input__message" style="display: none;">
-              {{'This field is required' | translate}}.
+              {{'This field is required.' | translate}}
             </span>
             <!--Input error section ends-->
           </div>
@@ -163,7 +163,7 @@
             <div class="wrap-input__line"></div>
             <!--Input error section starts-->
             <span class="wrap-input__message" style="display: none;">
-              {{'This field is required' | translate}}.
+              {{'This field is required.' | translate}}
             </span>
             <!--Input error section ends-->
           </div>
@@ -173,7 +173,7 @@
             <div class="wrap-textarea__line"></div>
             <!--Input error section starts-->
             <span class="wrap-textarea__message" style="display: none;">
-              {{'This field is required' | translate}}.
+              {{'This field is required.' | translate}}
             </span>
             <!--Input error section ends-->
           </div>
