--- a/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
@@ -1,15 +1,15 @@
-<div *ngIf="!isSentPin">
+<div *ngIf="isSentPin">
   <div class="title send__title">Two factor authentication</div>
   <!--if google 2fa enabled start-->
   <form [formGroup]="form">
-    <div class="subtitle send__subtitle">Enter 2FA code</div>
+    <div class="subtitle send__subtitle">{{subtitleMessage}}</div>
     <div class="wrap-input send__wrap-input"
          [ngClass]="{'wrap-input--error': !form.valid && form.controls['pin'].touched}">
       <input class="wrap-input__input" name="pin" formControlName="pin" required>
       <label class="wrap-input__label">Authenticator code</label>
       <div class="wrap-input__line"></div>
       <!--Input error section starts-->
-      <span class="wrap-input__message" *ngIf="!form.valid && form.controls['pin'].touched">Invalid code</span>
+      <span class="wrap-input__message" *ngIf="!form.valid && form.controls['pin'].touched">Invalid code</span><br>
       <span class="wrap-input__message">{{message}}</span>
       <!--<span class="wrap-input__message">Invalid code</span>-->
       <!--Input error section ends-->
@@ -18,16 +18,17 @@
 </div>
 <!--if google 2fa enabled end-->
 <!--pin code from email start-->
-<div *ngIf="isSentPin">
+<div *ngIf="!isSentPin">
   <div class="subtitle send__subtitle">Put the pincode from your email</div>
   <form [formGroup]="form">
+    <div class="subtitle send__subtitle">{{subtitleMessage}}</div>
     <div class="wrap-input send__wrap-input"
          [ngClass]="{'wrap-input--error': !form.valid && form.controls['pin'].touched}">
       <input class="wrap-input__input" name="pin" formControlName="pin" required>
       <label class="wrap-input__label">Pincode</label>
       <div class="wrap-input__line"></div>
       <!--Input error section starts-->
-      <span class="wrap-input__message" *ngIf="!form.valid && form.controls['pin'].touched">Invalid code</span>
+      <span class="wrap-input__message" *ngIf="!form.valid && form.controls['pin'].touched">Invalid code</span><br>
       <span class="wrap-input__message">{{message}}</span>
       <!--<span class="wrap-input__message">Invalid code</span>-->
       <!--Input error section ends-->
