fix balance table DEVEX-915

--- a/src/app/funds/balance/balance-table/balance-table.component.html
+++ b/src/app/funds/balance/balance-table/balance-table.component.html
@@ -28,7 +28,7 @@
             <div class="balance__currency-icon">
               <img [src]="item.currencyName | getIconUrl">
             </div>
-            <span>{{item.currencyName}}</span>
+            <span style="min-width: 70px;">{{item.currencyName}}</span>
             <span class="balance__currency-name">{{item.currencyDescription}}</span>
           </div>
         </td>
