fix color btn DEVEX-870

--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -838,8 +838,8 @@
       line-height: 53px;
       font-size: 24px;
       margin: 44px 0 0;
-      background-color: #264F92;
-      border-color: rgba(35, 123, 239, 0.5);
+      //background-color: #264F92;
+      //border-color: rgba(35, 123, 239, 0.5);
       &:hover {
         background-color: $darker-blue;
         border-color: transparent;
@@ -1008,8 +1008,8 @@
       }
     }
     &__trading-btn {
-      background-color: #264F92;
-      border-color: rgba(35, 123, 239, 0.5);
+      //background-color: #264F92;
+      //border-color: rgba(35, 123, 239, 0.5);
       &:hover {
         background-color: $darker-blue;
         border-color: transparent;
