--- a/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
+++ b/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
@@ -23,23 +23,23 @@
         >
           </span>
         <!--Input error section starts-->
-        <div *ngIf="passwordForm.controls['password'].touched && passwordForm.controls['password'].errors != null">
-            <span
-              *ngIf="passwordForm.get('password').errors['required']"
-              class="wrap-input__message">
-              Password is required.
-            </span>
+        <!--<div *ngIf="passwordForm.controls['password'].touched && passwordForm.controls['password'].errors != null">-->
+            <!--<span-->
+              <!--*ngIf="passwordForm.get('password').errors['required']"-->
+              <!--class="wrap-input__message">-->
+              <!--Password is required.-->
+            <!--</span>-->
           <span
-            *ngIf=" passwordForm.controls['password'].errors['pattern'] || passwordForm.controls['password'].errors['minlength']"
+            [ngClass]="{'msg-error': (msgRed && !passwordForm.controls['password'].valid && passwordForm.controls['password'].touched)}" *ngIf="!passwordForm.valid"
             class="wrap-input__message">
-              Should have 8 chars at least, symbols and numbers.
+              Password cannot be less than 8 characters long and should contain of letters (a-z), numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+' characters
             </span>
-          <span
-            *ngIf=" passwordForm.controls['password'].errors['maxlength']"
-            class="wrap-input__message">
-              Password cannot be more than 20 characters long
-            </span>
-        </div>
+          <!--<span-->
+            <!--*ngIf=" passwordForm.controls['password'].errors['maxlength']"-->
+            <!--class="wrap-input__message">-->
+              <!--Password cannot be more than 20 characters long-->
+            <!--</span>-->
+        <!--</div>-->
         <!--Input error section ends-->
       </div>
 
