--- a/src/app/auth/final-registration/final-registration.component.scss
+++ b/src/app/auth/final-registration/final-registration.component.scss
@@ -5,3 +5,10 @@
 .popup__btn.btn.bg-none{
   background-color: #237BEF !important;
 }
+
+.msg-error {
+  color: #d04437 !important;
+}
+.wrap-input__message{
+  color: #c2c5cb;
+}
