fix hover DEVEX-921

--- a/src/assets/scss/pages/_footer-pages.scss
+++ b/src/assets/scss/pages/_footer-pages.scss
@@ -85,7 +85,7 @@
 
         &:hover {
           color: $grey;
-          text-decoration: none;
+          text-decoration: underline;
         }
       }
     }
