--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -256,6 +256,7 @@
         <th class="table__cell-head table__cell-head--tal">Status</th>
         <th class="table__cell-head table__cell-head--tal">Date</th>
         <th class="table__cell-head table__cell-head--tal">Currency</th>
+        <th class="table__cell-head table__cell-head--tal">Commission</th>
         <th class="table__cell-head table__cell-head--tal">Amount</th>
         <th class="table__cell-head table__cell-head--tal">Type</th>
         <th class="table__cell-head table__cell-head--tal">Address</th>
@@ -289,6 +290,9 @@
             <span>{{item.amount | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</span>
           </td>
           <td class="table__cell">
+            <span>{{item.amount | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</span>
+          </td>
+          <td class="table__cell">
             <span class="txt-green">{{item.sourceType}}</span>
           </td>
           <td class="table__cell">
@@ -297,7 +301,7 @@
         </tr>
 
         <tr class="table__row" *ngIf="!(transactionsItems$ | async).length && !(loading$ | async)">
-          <td class="table__cell table__cell--tac" colspan="6">
+          <td class="table__cell table__cell--tac" colspan="7">
             No matching records found
           </td>
         </tr>
