--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -442,7 +442,7 @@
     transform: translate(-50%, 0);
     font-size: 14px;
     height: 40px;
-    line-height: 40px;
+    line-height: 1;
     .btn__icon {
       margin-right: 6px;
     }
@@ -571,7 +571,7 @@
     max-width: 220px;
     height: 40px;
     font-size: 18px;
-    line-height: 40px;
+    line-height: 1;
     margin: 28px auto 0;
   }
   &__buy-sell-btn-wrap {
@@ -835,7 +835,7 @@
     &__trading-btn {
       max-width: none;
       height: 53px;
-      line-height: 53px;
+      line-height: 1;
       font-size: 24px;
       margin: 44px 0 0;
       //background-color: #264F92;
