--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -69,7 +69,7 @@
           <label class="radio">
             <input class="radio__input" type="radio" name="radio-procent">
             <span class="radio__text" [ngClass]="{'radio__text__checked': percents === 100}"
-                  (click)="calculateAmountByTotal()">
+                  (click)="calculateAmountByTotalWithCommission()">
               100%
             </span>
           </label>
@@ -131,13 +131,13 @@
           <span style="vertical-align: middle; margin-right: 4px;">Available balance: </span>
           <a
             *ngIf="mainTab === 'BUY'"
-            (click)="calculateAmountByTotal()"
+            (click)="calculateAmountByTotalWithCommission()"
           >
             {{ userBalance.cur2?.balance  | roundCurrency: isFiat(userBalance.cur2?.name) | formatCurrency}} {{userBalance.cur2?.name}}
           </a>
           <a
             *ngIf="mainTab === 'SELL'"
-            (click)="calculateAmountByTotal()"
+            (click)="calculateAmountByTotalWithCommission()"
           >
             {{ userBalance.cur1?.balance  | roundCurrency: isFiat(userBalance.cur1?.name) | formatCurrency}} {{userBalance.cur1?.name}}
           </a>
@@ -267,7 +267,7 @@
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-procent">
           <span class="radio__text" [ngClass]="{'radio__text__checked': percents === 100}"
-                (click)="calculateAmountByTotal()">
+                (click)="calculateAmountByTotalWithCommission()">
           100%
         </span>
         </label>
@@ -330,13 +330,13 @@
         </span>
           <a
             *ngIf="mainTab === 'BUY'"
-            (click)="calculateAmountByTotal()"
+            (click)="calculateAmountByTotalWithCommission()"
           >
             {{ userBalance.cur2?.balance  | roundCurrency: isFiat(userBalance.cur2?.name) | formatCurrency}} {{userBalance.cur2?.name}}
           </a>
           <a
             *ngIf="mainTab === 'SELL'"
-            (click)="calculateAmountByTotal()"
+            (click)="calculateAmountByTotalWithCommission()"
           >
             {{ userBalance.cur1?.balance  | roundCurrency: isFiat(userBalance.cur1?.name) | formatCurrency}} {{userBalance.cur1?.name}}
           </a>
@@ -374,7 +374,7 @@
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-procent">
           <span class="radio__text" [ngClass]="{'radio__text__checked': percents === 100}"
-                (click)="calculateAmountByTotal()">
+                (click)="calculateAmountByTotalWithCommission()">
           100%
         </span>
         </label>
