--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -698,7 +698,7 @@
         margin: 0 32px 4px 16px;
         .widget__message {
           margin-right: 28px;
-          max-width: 314px;
+          max-width: 288px;
         }
       }
       &--right {
@@ -716,7 +716,8 @@
       -webkit-border-radius: 4px;
       -moz-border-radius: 4px;
       border-radius: 4px;
-      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+      //box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+      box-shadow: none;
     }
     &__search-input {
       display: block;
@@ -738,6 +739,9 @@
       }
       &::placeholder {
         color: #A0A0A0;
+      }
+      &:required{
+        box-shadow: none;
       }
     }
     &__send-input {
