--- a/src/assets/scss/pages/_login-registration.scss
+++ b/src/assets/scss/pages/_login-registration.scss
@@ -34,6 +34,10 @@
     color: $dark-indigo;
     font-size: 24px;
     line-height: 130%;
+    &.tnx-head{
+      font-size: 24px;
+      margin-bottom: 50px;
+    }
   }
   &__subtitle {
     display: block;
@@ -42,6 +46,10 @@
     color: $dark-indigo;
     font-size: 18px;
     line-height: 24px;
+    &.tnx-description{
+      font-size: 14px;
+      margin-bottom: 50px;
+    }
   }
   &__email-link {
     color: $darker-blue;
