--- a/src/app/funds/balance/send-money/send-money.component.scss
+++ b/src/app/funds/balance/send-money/send-money.component.scss
@@ -2,10 +2,11 @@
   padding: 32px 12px;
 }
 .overlay--modal{
-  background-color: transparent;
-  transition: background-color .4s ease;
+  //background-color: transparent;
+  //transition: background-color .4s ease;
 }
 .modal--open{
+  visibility: visible;
   background-color: rgba(0, 0, 0, 0.85);
   .modal{
     right: 0;
