--- a/src/app/popups/two-factor-popup/two-factor-popup.component.scss
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.scss
@@ -5,3 +5,11 @@
   background: #94C2FF;
   z-index: inherit;
 }
+
+.modal--open{
+  visibility: visible;
+  background-color: rgba(0, 0, 0, 0.85);
+  .modal{
+    right: 0;
+  }
+}
