--- a/src/app/popups/two-factor-popup/two-factor-popup.component.html
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.html
@@ -1,5 +1,5 @@
-<div class="overlay--modal" (click)="closePopup()">
-  <div class="modal">
+<div class="overlay--modal" *ngIf="showPopup" [@overlayAnimation]="showPopup ? 'show' : 'hide'">
+  <div class="modal" [@modalAnimation]="showPopup ? 'show' : 'hide' ">
     <!-- btn modal close -->
     <div class="modal__controls modal__controls--top">
       <a class="modal__button modal__button--close" (click)="closePopup()">
