--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -193,11 +193,11 @@
         background-color: $darker-blue;
         border-color: $darker-blue;
       }
-      &:focus{
-        color:#fff;
-        background-color: $darker-blue;
-        border-color: $darker-blue;
-      }
+      //&:focus{
+      //  color:#fff;
+      //  background-color: $darker-blue;
+      //  border-color: $darker-blue;
+      //}
     }
     &__icon{
       &--blue {
