--- a/src/app/dashboard/components/tools/tools.component.scss
+++ b/src/app/dashboard/components/tools/tools.component.scss
@@ -18,3 +18,45 @@
   visibility: visible;
   opacity: 1;
 }
+
+.info-tools {
+  position: absolute;
+  background-color: #237BEF;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  right: -20px;
+  top: 0px;
+  height: fit-content;
+  width: 18px;
+  img{
+    margin-top: 3px;
+    padding-right: 4px;
+    //padding-bottom: 4px;
+    height: 15px;
+  }
+  .tools-label{
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    text-orientation: sideways;
+    font-size: 13px;
+    padding: 3px 2px 0px 3px;
+  }
+}
+
+//.w{
+//  position: relative;
+//  .tools-info {
+//    z-index: 999999999;
+//    position: absolute;
+//    top: 100px;
+//    right: 0;
+//    width: 20px;
+//    height: 40px;
+//    background-color: #237BEF !important;
+//    img{
+//      height: 20px;
+//      width: 20px;
+//    }
+//  }
+//}
+
