--- a/src/app/dashboard/components/embedded-orders/embedded-orders.component.scss
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders.component.scss
@@ -5,3 +5,15 @@
   min-height: calc(100% - 45px);
 }
 
+.ishover {
+  &:hover {
+    background: none !important;
+  }
+  svg{
+    fill: #50537c !important;
+  }
+}
+
+.cursorDisable {
+  cursor: default;
+}
