--- a/src/app/dashboard/components/graph/graph.component.scss
+++ b/src/app/dashboard/components/graph/graph.component.scss
@@ -41,3 +41,13 @@
   right: 0;
   bottom: 0;
 }
+
+.ishover {
+  &:hover {
+    background: none !important;
+  }
+  svg{
+    fill: #50537c !important;
+  }
+}
+
