--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -76,14 +76,16 @@
     margin-left: auto;
   }
   &__controls-horizontal {
-    display: none;
+    //display: none;
+    display: flex;
     padding-top: 8px;
     svg {
       fill: #000;
     }
   }
   &__controls-vertical {
-    display: none;
+    //display: none;
+    display: flex;
     margin-left: 28px;
     padding-top: 8px;
     svg {
@@ -91,8 +93,10 @@
     }
   }
   &__controls-plus, &__controls-minus {
+    padding: 4px 6px 0 6px;
     &:hover {
       cursor: pointer;
+      background: rgba(0,0,0,.1);
     }
   }
   &__controls-horizontal-img, &__controls-vertical-img {
@@ -102,8 +106,11 @@
     margin-left: 36px;
     margin-right: 16px;
     padding-top: 11px;
+    padding-left: 10px;
+    padding-right: 10px;
     &:hover {
       cursor: pointer;
+      //background: rgba(0,0,0,.1);
     }
     svg {
       vertical-align: top;
