fix tools overlay

--- a/src/app/dashboard/components/tools/tools.component.html
+++ b/src/app/dashboard/components/tools/tools.component.html
@@ -1,12 +1,4 @@
 
-<!--<div class="w">-->
-  <!--<div class="tools-info">-->
-    <!--<img src="assets/img/arr-toggle-right-white.svg" alt="">-->
-
-    <!--<p> test test</p>-->
-
-  <!--</div>-->
-<!--</div>-->
 <div class="dashboard-tools" style="min-width: 103px" (mouseenter)="showOverlay()" (mouseleave)="hideOverlay()" *ngIf="visibleToolsItems.length">
 
   <div class="dashboard-tools__header">
@@ -27,4 +19,4 @@
   </div>
 </div>
 
-<div class="overlay overlay-hide" #overlay [ngClass]="{'overlay-show': overlayShow}" *ngIf="visibleToolsItems.length"></div>
+<div class="overlay overlay-hide" #overlay [ngClass]="{'overlay-show': overlayShow}" ></div>
